--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+# app:
+#     resource: "@AppBundle/Controller/"
+#     type:     annotation
 
 core_accounting:
     resource: "@CoreAccountingBundle/Resources/config/routing.yml"
